deploy-dgx/manifests/40-adminer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: bootstrap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: adminer
          image: docker.io/library/adminer:4.8.1-standalone
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
