deploy-dgx/manifests/53-filebrowser-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: bootstrap
spec:
  selector:
    app: filebrowser
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
